--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,7 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  padding: 60px;
-}
-
-input {
-  color: grey;
-  width: 100%;
-  font-size: 1.2rem;
-}
-
-.card-grid {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.card {
-  align-content: center;
-  border: 1px solid grey;
-  border-radius: 6px;
-  overflow: hidden;
-  margin-bottom: 10px;
-  margin-right: 10px;
-}
-
-.card p {
-  padding: 5px;
-  text-align: center;
-}
-
-.card img {
-  max-height: 1701px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@keyframes fadeOut {
+    0% { opacity: 1; }
+    100% { opacity: 0; }
+  }
